RESOLVED FIXED268411
[JSC] try/catch should not intercept errors originated in [[Construct]] of derived class
https://bugs.webkit.org/show_bug.cgi?id=268411
Summary [JSC] try/catch should not intercept errors originated in [[Construct]] of de...
Alexey Shvayka
Reported 2024-01-30 14:18:15 PST Comment hidden (obsolete)
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-30 14:18:39 PST
Alexey Shvayka
Comment 2 2024-02-23 14:21:37 PST
Alexey Shvayka
Comment 3 2024-02-23 14:58:50 PST
Related test262 failures: * test/language/statements/class/subclass/derived-class-return-override-catch-super-arrow.js * test/language/statements/class/subclass/derived-class-return-override-catch-super.js * test/language/statements/class/subclass/derived-class-return-override-catch.js
EWS
Comment 4 2024-02-26 16:44:23 PST
Committed 275353@main (ad689935bb77): <https://commits.webkit.org/275353@main> Reviewed commits have been landed. Closing PR #25033 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.